--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,4 +1,5 @@
 ---
+import { favicon } from "@/lib/config";
 import "@/styles/main.css";
 interface Props {
   title: string;
@@ -14,7 +15,10 @@ const base = import.meta.env.BASE_URL;
     <base href={`${base}/`} />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link
+      rel="icon"
+      href={`data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>${favicon}</text></svg>`}
+    />
     <title>{title}</title>
   </head>
   <body class="dark">
