--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,8 @@
   --accent-blue: #016eda;
   --accent-blue-hover: #1c74dc;
   --accent-dark-blue: #0d0e21;
+  --accent-dark-red: #301a00;
+  --accent-dark-green: #00301a;
 }
 
 * {
