--- a/src/components/modelListItem.css
+++ b/src/components/modelListItem.css
@@ -1,10 +1,26 @@
 .model-li {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 0.15fr 1fr;
   border: 1px solid #ccc;
   border-radius: 0.25em;
-  padding: 1em;
   background: var(--mid);
+}
+.model-li .preview {
+  position: relative;
+  object-fit: cover;
+}
+
+.model-li .preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.model-li .content {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  padding: 1em;
 }
 
 .model-li[data-is-queued="true"],
