--- a/src/pages/model.astro
+++ b/src/pages/model.astro
@@ -3,7 +3,7 @@ import Main from "@/layouts/Main.astro";
 import ModelInfo from "@/components/model";
 ---
 
-<Main title={`Model info`}>
+<Main title="Model info">
   <main>
     <ModelInfo client:only />
   </main>
