--- a/src/components/modelListItem.css
+++ b/src/components/modelListItem.css
@@ -1,16 +1,25 @@
 .model-li {
   display: grid;
-  grid-template-columns: 0.15fr 1fr;
-  border: 1px solid #ccc;
-  border-radius: 0.25em;
+  position: relative;
   background: var(--mid);
+  border: 2px solid var(--lighter);
+  border-radius: 0.25em;
+  align-items: center;
+}
+.model-li:not([data-has-error="true"]) {
+  min-height: 8em;
+}
+.model-li[data-has-preview="true"] {
+  grid-template-columns: 0.15fr 1fr;
 }
 .model-li .preview {
   position: relative;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .model-li .preview img {
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -19,8 +28,29 @@
 .model-li .content {
   display: grid;
   grid-template-columns: 1fr;
+  padding: 0.5em 1em;
+}
+.model-li[data-has-error="true"] .content {
+  padding: 0 1em;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+  justify-content: space-between;
+}
+.model-li[data-has-error="true"] h3 {
+  font-size: 0.8em;
+}
 
-  padding: 1em;
+.model-li .fields {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0.2em 0.5em;
+  align-items: center;
+}
+.model-li .fields {
+  font-size: 0.8em;
+}
+.model-li .textarea {
+  display: contents;
 }
 
 .model-li[data-is-queued="true"],
@@ -37,7 +67,10 @@
 
 .model-li[data-has-error="true"],
 .model-li[data-has-error="true"] textarea {
-  background: var(--accent-dark-red);
+  opacity: 0.8;
+  border-style: dashed;
+  border-color: var(--accent-dark-red);
+  background: none;
 }
 
 .model-li .header {
@@ -48,25 +81,34 @@
 }
 
 .model-li h3 {
+  color: var(--link-color);
   margin: 0;
+  margin-bottom: 0.25em;
   font-size: 1em;
 }
 
 .model-li textarea {
-  background: var(--mid);
-  display: block;
-  align-content: center;
-  height: 3em;
-  border: 1px solid #ccc;
-  border-radius: 0.25em;
-  padding: 0.25em;
+  background: var(--darkest);
+  display: inline-block;
+  border: none;
+  padding: 0;
   resize: none;
-  min-height: min-content;
+  min-height: 0;
   font-size: 0.8em;
-  margin-bottom: 0.25em;
 }
 
 .model-li a svg {
   width: 1em;
   height: 1em;
+}
+
+/* Row spacing */
+.model-li:not([data-has-error="true"]) {
+  margin: 0.5em 0;
+}
+.model-li:not([data-has-error="true"]):has(+ .model-li[data-has-error="true"]) {
+  margin-bottom: 1em;
+}
+.model-li[data-has-error="true"]:has(+ .model-li:not([data-has-error="true"])) {
+  margin-bottom: 0.5em;
 }
