--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,21 +1,28 @@
 ---
 import Main from "@/layouts/Main.astro";
-import ModelInfo from "@/components/model";
+import "@/styles/about.css";
 ---
 
 <Main title="About">
-  <main>
+  <main id="about">
     <h1>About</h1>
     <p>Displays Civitai info for your locally downloaded models</p>
     <p>Runs in your browser, no data is uploaded</p>
-    <h2>Limitations</h2>
+    <h2>Limitations / Beware</h2>
     <ul class="list">
+      <li>
+        Navigating between pages will interrupt any processing that is still in
+        progress
+      </li>
+      <li>
+        Completed process data is saved in local storage. Clearing your local
+        storage will purge all cached data
+      </li>
       <li>
         Most browsers only allows grabbing file array buffers <a
           href="https://issues.chromium.org/issues/40055619">under 2GB</a
-        >
-        . It is still possible to hash larger files, but they must be streamed, which
-        is a bit slower.
+        >. It is still possible to hash larger files, but they must be streamed,
+        which is a bit slower.
       </li>
     </ul>
   </main>
