add renaming file note to about

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,6 +24,10 @@ import "@/styles/about.css";
         >. It is still possible to hash larger files, but they must be streamed,
         which is a bit slower.
       </li>
+      <li>
+        If your model file's name changes and there is no adjacent *.sha256
+        file, the hash will be recalculated
+      </li>
     </ul>
   </main>
 </Main>
