fix search field not populating

--- a/src/pages/model.astro
+++ b/src/pages/model.astro
@@ -5,6 +5,6 @@ import ModelInfo from "@/components/model";
 
 <Main title="Model info">
   <main>
-    <ModelInfo client:only />
+    <ModelInfo client:only="preact" />
   </main>
 </Main>
