--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -26,6 +26,7 @@ const base = import.meta.env.BASE_URL;
       <ul>
         <a href="./">Home</a>
         <a href="./about">About</a>
+        <a href="./settings">Settings</a>
       </ul>
       <ul>
         <a href="https://github.com/lokimckay/civitai-model-browser">Github</a>
