--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,7 @@
   --accent-dark-blue: #0d0e21;
   --accent-dark-red: #301a00;
   --accent-dark-green: #00301a;
+  --accent-red: #9e0000;
 
   --link-color: var(--accent-blue);
   --link-color-hover: #1c74dc;
