--- a/src/components/model.css
+++ b/src/components/model.css
@@ -31,13 +31,16 @@
   display: contents;
 }
 
-.model-info .gallery img.thumbnail {
+.model-info .gallery .gallery-item:has(> img.thumbnail) {
   border: 0.25em solid var(--accent-blue);
   border-radius: 0.25em;
 }
 
 .model-info .description {
   border-top: 2px dotted var(--lighter);
-  margin-top: 2em;
   padding-top: 0.5em;
+}
+.model-info .desc-header {
+  margin-bottom: 0;
+  margin-top: 1em;
 }
