--- a/src/components/switch.css
+++ b/src/components/switch.css
@@ -19,6 +19,7 @@
 .switch .track {
   position: relative;
   height: var(--height, auto);
+  min-width: 3.5em;
   max-width: var(--width, 3.5em);
 }
 
